<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">

  <RelativeLayout
      android:layout_width="fill_parent"
      android:layout_height="466dp"
      android:background="#181a21" >
  		
  		<!--  Header  Starts-->

  		<LinearLayout
  		    android:id="@+id/header"
  		    android:layout_width="fill_parent"
  		    android:layout_height="wrap_content"
  		    android:background="@color/white"
  		    android:orientation="vertical"
  		    android:paddingBottom="5dip"
  		    android:paddingTop="5dip" >

  				<!-- Logo Start-->

  				<ImageView
  				    android:layout_width="wrap_content"
  				    android:layout_height="match_parent"
  				    android:layout_marginLeft="5dip"
  				    android:layout_marginRight="5dip"
  				    android:contentDescription="@string/todo"
  				    android:src="@drawable/logo" />

  				<!-- Logo Ends -->
  		</LinearLayout>
  		<!--  Header Ends -->  
  		
  		
  		<!-- Login Form -->

		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_alignParentBottom="true"
		    android:layout_below="@id/header"
		    android:background="@color/white"
		    android:orientation="vertical"
		    android:padding="10dip" >

		  <!--  Email Label -->

		  <TextView
		      android:layout_width="fill_parent"
		      android:layout_height="wrap_content"
		      android:text="@string/email"
		      android:textColor="@color/black"
		      android:textColorLink="@color/black"
		      android:textSize="18sp"
		      android:textStyle="bold" />

		  <EditText
		      android:id="@+id/email"
		      android:layout_width="fill_parent"
		      android:layout_height="wrap_content"
		      android:layout_marginBottom="20dip"
		      android:layout_marginTop="5dip"
		      android:inputType="textEmailAddress"
		      android:singleLine="true"
		      android:textColorLink="@color/black"
		      android:textStyle="bold" />

		  <!--  Password Label -->

		  <TextView
		      android:layout_width="fill_parent"
		      android:layout_height="wrap_content"
		      android:text="@string/password"
		      android:textColor="@color/black"
		      android:textColorLink="@color/black"
		      android:textSize="18sp"
		      android:textStyle="bold" />

		  <EditText
		      android:id="@+id/pass"
		      android:layout_width="fill_parent"
		      android:layout_height="wrap_content"
		      android:layout_marginTop="5dip"
		      android:inputType="textPassword"
		      android:singleLine="true"
		      android:textColorLink="@color/black"
		      android:textStyle="bold" />
	  
		  		<!-- Login button -->

		  <Button
		      android:id="@+id/btnLogin"
		      android:layout_width="match_parent"
		      android:layout_height="50dp"
		      android:layout_marginTop="15dip"
		      android:background="@drawable/buttonshape"
		      android:text="@string/login"
		      android:textColorLink="@color/black"
		      android:textSize="22sp"
		      android:textStyle="bold" />

		  <!-- Link to Registration Screen -->		

		  <TextView
		      android:id="@+id/link_to_register"
		      android:layout_width="fill_parent"
		      android:layout_height="wrap_content"
		      android:layout_marginBottom="40dip"
		      android:layout_marginTop="40dip"
		      android:gravity="center"
		      android:text="@string/newtoams"
		      android:textColor="@color/black"
		      android:textSize="20sp"
		      android:textStyle="bold" />
		    
		</LinearLayout>
  		<!-- Login Form Ends --> 		
  		
  </RelativeLayout>
</ScrollView>
