<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">
  <RelativeLayout 
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content" android:background="#fff">
  		
  		<!--  Header  Starts-->

  		<LinearLayout
  		    android:id="@+id/header"
  		    android:layout_width="fill_parent"
  		    android:layout_height="wrap_content"
  		    android:background="@color/white"
  		    android:paddingBottom="5dip"
  		    android:paddingTop="5dip" >

  		    <!-- Logo Start -->

  		    <ImageView
  		        android:layout_width="wrap_content"
  		        android:layout_height="wrap_content"
  		        android:layout_marginLeft="5dip"
  		        android:layout_marginRight="5dip"
  		        android:layout_weight="0.32"
  		        android:contentDescription="@string/todo"
  		        android:src="@drawable/logo" />
  		    <!-- Logo Ends -->
  		</LinearLayout>

  		<!--  Header Ends --> 
  		<!-- Footer Start -->

  		<LinearLayout
  		    android:id="@+id/footer"
  		    android:layout_width="wrap_content"
  		    android:layout_height="90dip"
  		    android:layout_alignParentBottom="true"
  		    android:background="@color/navy_darker"
  		    android:orientation="vertical" >

  		</LinearLayout>
  		<!-- Footer Ends --> 
  		
  		<!-- Registration Form xmlns:android="http://schemas.android.com/apk/res/android" -->

		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_alignParentBottom="true"
		    android:layout_below="@id/header"
		    android:background="@color/white"
		    android:orientation="vertical"
		    android:padding="10dip" >

		  <!-- Full Name Label -->

		  <TextView
		      android:layout_width="fill_parent"
		      android:layout_height="wrap_content"
		      android:text="@string/fullname"
		      android:textColor="@color/black"
		      android:textSize="20sp"
		      android:textStyle="bold" />

		  <EditText
		      android:id="@+id/reg_fullname"
		      android:layout_width="fill_parent"
		      android:layout_height="wrap_content"
		      android:layout_marginBottom="20dip"
		      android:layout_marginTop="5dip"
		      android:inputType="textPersonName"
		      android:singleLine="true"
		      android:textColorHint="@color/black"
		      android:textColorLink="@color/black" />

		  <!--  Email Label -->

		  <TextView
		      android:layout_width="fill_parent"
		      android:layout_height="wrap_content"
		      android:text="@string/email"
		      android:textColor="@color/black"
		      android:textSize="20sp"
		      android:textStyle="bold" />

		  <EditText
		      android:id="@+id/reg_email"
		      android:layout_width="fill_parent"
		      android:layout_height="wrap_content"
		      android:layout_marginBottom="20dip"
		      android:layout_marginTop="5dip"
		      android:inputType="textEmailAddress"
		      android:singleLine="true"
		      android:textColorHint="@color/black"
		      android:textColorLink="@color/black" />
		  
		  <!-- Password Label android:password="true" -->

		  <TextView
		      android:layout_width="fill_parent"
		      android:layout_height="wrap_content"
		      android:text="@string/password"
		      android:textColor="@color/black"
		      android:textSize="20sp"
		      android:textStyle="bold" />

		  <EditText
		      android:id="@+id/reg_password"
		      android:layout_width="fill_parent"
		      android:layout_height="wrap_content"
		      android:layout_marginTop="5dip"
		      android:inputType="textPassword"
		      android:singleLine="true"
		      android:textColorHint="@color/black"
		      android:textColorLink="@color/black" />

		  <!-- Register Button -->		

		  <Button
		      android:id="@+id/btnRegister"
		      android:layout_width="match_parent"
		      android:layout_height="50dp"
		      android:layout_gravity="center"
		      android:layout_marginTop="15dip"
		      android:background="@drawable/buttonshape"
		      android:text="@string/registernewaccount"
		      android:textSize="20sp"
		      android:textStyle="bold" />

		  <!-- Link to Login Screen -->

		  <TextView
		      android:id="@+id/link_to_login"
		      android:layout_width="fill_parent"
		      android:layout_height="wrap_content"
		      android:layout_marginBottom="40dip"
		      android:layout_marginTop="40dip"
		      android:gravity="center"
		      android:text="@string/already"
		      android:textColor="@color/black"
		      android:textColorLink="@color/black"
		      android:textSize="20sp"
		      android:textStyle="bold" />
		    
		</LinearLayout>
  		<!-- Registration Form Ends -->
  		
  		
  </RelativeLayout>
</ScrollView>
